# trajectory_analysis

./: .gitignore  README.md  pyproject.toml  run.py
rust/: Cargo.toml  README.md  pyproject.toml
rust/src/: contacts.rs  lib.rs  python_bindings.rs  structure.rs  trajectory.rs
src/: contacts.py  trajectory.py  utils.py
